Now calculates drops from mobs (optional)

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ a.bl{color:black;}
 div{background-color: #c6c6c6; border:solid 1px white; margin: auto;}
 div.main{width:70%; margin-bottom:20px; margin-top:50px; padding:20px; text-align:top; border-radius:25px; opacity:0.8;}
 div.main2{width:60%; margin-bottom:20px; margin-top:50px; padding:20px; text-align:top; border-radius:25px; opacity:0.85;}
-label{color:#c0c0c0; border-style:hidden; margin:auto; font-family: Arial; font-size:24px;}
+label{color:black; border-style:hidden; margin:auto; font-family: Arial; font-size:48px;}
 td{color:black; font-family: Arial; font-size: 24px;}
 p{color:#black; border-style:hidden; margin: auto; font-size:48px; font-family:Arial;}
 img{opacity:1;}
