--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body{background-image:url(bg.jpg); background-position:top; background-size:100%; text-align:center;}
 h3{font-family:Arial; text-shadow: 0 0 2px #880000;}
+h1{font-family:Arial; color:black; font-size:50px; text-shadow: 0 0 4px white,0 0 7px black;}
 a{color:#c0c0c0;}
-a.bl{color:black; border:solid 2px blue; background-color:skyblue; margin-top:5px; margin-left:5px; margin-right:5px; margin-bottom:20px; padding:8px; border-radius:5px; text-decoration: none;}
-a.bl:hover{color:skyblue; border:solid 2px blue; background-color:black;}
+a.bl{color:yellow; border:solid 1px yellow; background-color:black; margin-top:5px; margin-left:5px; margin-right:5px; margin-bottom:20px; padding:8px; border-radius:5px; text-decoration: none;}
+a.bl:hover{color:black; border:solid 1px black; background-color:#3399ff;}
 span{padding:0px;}
 div{background-color: #c6c6c6; border:solid 1px white; margin: auto;}
 div.main{width:70%; margin-bottom:20px; margin-top:50px; padding:20px; text-align:top; border-radius:25px; opacity:0.8;}
